[Add] テスト時にパラメータを渡す